hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_vd.inp
agent validate check
agent validate check "a"
agent validate notify
agent validate notify "a"
agent validate push
agent validate push ""
agent validate push "a"
agent validate push "a" "b"

quit
